fix: Update default company values in forms to 'Meta'

--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
 
                 <div class="form-group">
                     <label for="company">Company</label>
-                    <input type="text" id="company" name="company" value="Tech Company" required>
+                    <input type="text" id="company" name="company" value="Meta" required>
                 </div>
 
                 <div class="form-group">
@@ -216,7 +216,7 @@
 
                 <div class="form-group">
                     <label for="audio-company">Company</label>
-                    <input type="text" id="audio-company" name="company" value="Tech Company" required>
+                    <input type="text" id="audio-company" name="company" value="Meta" required>
                 </div>
 
                 <div class="form-group">
